[tool.poetry]
name = "ohu"
version = "0.0.1"
readme = "README.md"
description = "A renderer"
authors = ["A O <adhambek.otabekov.post@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-poppler-qt5 = {version="==21.3.0", optional=true}
plug = {path = "/home/adam/code/plug", extras=["qt"], develop = true}

[tool.poetry.extras]
pdf=["python-poppler-qt5"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
