[tool.poetry]
name = "ohu"
version = "0.0.1"
readme = "README.md"
description = "A renderer"
authors = ["A O <adhambek.otabekov.post@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pymupdf = {version="==1.23.5", optional=true}
xmltodict = {version=">=0.13.0", optional=true}
python-poppler-qt5 = {version="==21.3.0", optional=true} # Causes pep517 error
gizmo = {path = "/home/adam/code/gizmo", develop = true}
plug = {path = "/home/adam/code/plug", extras=["qt"], develop = true}
python-djvulibre = {git="https://github.com/aotabekov91/python-djvulibre", optional=true}

[tool.poetry.extras]
fitz=["pymupdf"]
epub=["xmltodict"]
djvu=["python-djvulibre"]
poppler=["python-poppler-qt5"]
all=["pymupdf", "python-djvulibre", "xmltodict"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# System-side requirements
# python-djvulibre:
## Ubuntu: libdjvulibre-dev
